test/deployer/testdata/agentgateway-buggy-omitdefaultsecuritycontext.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: agentgateway
spec:
  controllerName: agentgateway.dev/agentgateway
  description: Specialized class for agentgateway.
  parametersRef:
    group: agentgateway.dev
    kind: AgentgatewayParameters
    name: agwp-omit-security
    namespace: default
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayParameters
metadata:
  name: agwp-omit-security
  namespace: default
spec:
  # Try, and FAIL, to use a Deployment overlay to delete the default
  # securityContext using valid Strategic-Merge-Patch nulling that fails to
  # work inside of a CRD.
  deployment:
    spec:
      template:
        spec:
          # Wants to delete pod-level securityContext but fails because k8s
          # will drop any field with a null value, regardless of nesting depth
          securityContext: null
          containers:
            - name: agentgateway
              # Same intention; same bug!
              securityContext: null
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
  namespace: default
spec:
  gatewayClassName: agentgateway
  listeners:
    - protocol: HTTP
      port: 8080
      name: http
      allowedRoutes:
        namespaces:
          from: Same
